--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
-h1 {
-  background-color: aqua;
+#characters{
+  background-color: orange;
+  color: orangered;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  border: 2px solid chocolate;
+  padding: 25px;
+  margin: 10px;
+  text-align: left;
+}
+
+.aside{
+  display: inline-block;
+}
+
+body{
+  background-color: green;
 }
